<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="current_value">Current value</string>
    <string name="calculation_history">Calculation history</string>

    <string name="cancel" translatable="false">C</string>
    <string name="erase" translatable="false"><![CDATA[<--]]></string>
    <string name="divide" translatable="false">/</string>

    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="multiply" translatable="false">*</string>

    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="minus" translatable="false">-</string>

    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="plus" translatable="false">+</string>

    <string name="inversion" translatable="false">+/-</string>
    <string name="zero" translatable="false">0</string>
    <string name="dot" translatable="false">.</string>
    <string name="equally" translatable="false">=</string>


</resources>